fixes bug with about me page image not showing and adds button to about me page on new homepage.

--- a/src/App.css
+++ b/src/App.css
@@ -180,7 +180,7 @@ textarea {
     /* width: "100%"; */
   }
 
-  . .body-div {
+  .body-div {
     /* box-sizing: content-box; */
     width: 100%;
     position: relative;
